--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -11,3 +11,11 @@
    font-size: 20;
    margin: 15;
 }
+
+.action-bar-costume {
+   background-color:  $accent-light;
+   font-size: 20;
+   color: $white;
+   font-weight: bold;
+   padding-left: 10px;
+}
