--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -3,24 +3,30 @@
 
 //Font icon
 .fa {
-   font-family: "FontAwesome";
+  font-family: "FontAwesome";
 }
 
-.list-panel{
-   vertical-align: center;
-   font-size: 20;
-   margin: 15;
+.list-panel {
+  vertical-align: center;
+  font-size: 20;
+  margin: 15;
 }
 
 .action-bar-costume {
-   background-color:  $accent-light;
-   font-size: 20;
-   color: $white;
-   font-weight: bold;
-   padding-left: 10px;
+  background-color: $accent-light;
+  font-size: 20;
+  color: $white;
+  font-weight: bold;
+  padding-left: 10px;
 }
 
 .item-container {
-   padding-left: 10px;
-   padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 5px;
+}
+
+.link-label {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: $accent-light;
 }
